@@ -13,6 +13,8 @@ Format:
 + Add default URL parameters so 'service_type' and 'port' are not required.
 * Convert hardcoded SNI setting to command-line argument, so it's easier to toggle (Thanks Carl A.!)
 * Turn off logging of request headers during errors and exceptions; we do not want to record any private or sensitive client information.
+* Fix bug with incorrect Primary Key on Observations.
+	It's perfectly reasonable that we might see the same certificate used on the same site in non-contiguous blocks of time. Allow such changes to be stored in the database. (this has only been a bug since v3.0)
 + Add documentation and script for upgrading from notary version 2.x to version 3.x.
 * Add --verbose switch to scanner to generate less log data.
 
